# internal/connector/internal/api/dbapi/connector_namespace.go
@@ -5,6 +5,23 @@ import (
 	"time"
 )
 
+type ConnectorNamespacePhaseEnum = string
+
+const (
+	// ConnectorNamespacePhaseDisconnected - Namespace status when first created
+	ConnectorNamespacePhaseDisconnected ConnectorNamespacePhaseEnum = "disconnected"
+	// ConnectorNamespacePhaseReady- Namespace status when it operational
+	ConnectorNamespacePhaseReady ConnectorNamespacePhaseEnum = "ready"
+	// ConnectorNamespacePhaseDeleting- Namespace status when in the process of being deleted
+	ConnectorNamespacePhaseDeleting ConnectorNamespacePhaseEnum = "deleting"
+)
+
+var AllConnectorNamespaceStatus = []ConnectorNamespacePhaseEnum{
+	ConnectorNamespacePhaseDisconnected,
+	ConnectorNamespacePhaseReady,
+	ConnectorNamespacePhaseDeleting,
+}
+
 type ConnectorTenantUser struct {
 	db.Model // user id in Id, required for references and data consistency
 }
@@ -36,6 +53,14 @@ type ConnectorNamespace struct {
 	TenantOrganisationId *string                      `gorm:"index:connector_namespaces_user_organisation_idx;index:,where:tenant_organisation_id is not null"`
 	TenantUser           *ConnectorTenantUser         `gorm:"foreignKey:TenantUserId"`
 	TenantOrganisation   *ConnectorTenantOrganisation `gorm:"foreignKey:TenantOrganisationId"`
+
+	Status ConnectorNamespaceStatus `gorm:"embedded;embeddedPrefix:status_"`
+}
+
+type ConnectorNamespaceStatus struct {
+	Phase              ConnectorNamespacePhaseEnum `gorm:"not null;index"`
+	// populated by status update from the agent
+	ConnectorsDeployed int                         `gorm:"not null"`
 }
 
 type ConnectorNamespaceList []*ConnectorNamespace
